--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +31,27 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card-list {
+  padding: 35px;
+  box-sizing: border-box;
+  gap: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.coming-soon {
+  margin: 0px;
+  padding: 0 35px;
+  font-size: 35px;
+  color: #8f1a3a;
+}
+
+.soon-list {
+  padding: 35px;
+  box-sizing: border-box;
+  gap: 50px;
+  display: flex;
+  flex-direction: row;
 }
